Add .gitignore to ignore Vitis build artifacts and metadata

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,33 @@
-# Ignore build output directory
-/build
-/export
+# Vitis & Vivado build artifacts
+*.jou
+*.log
+*.str
+*.bit
+*.bin
+*.elf
 
-# Ignore object files and dependent files
-.o
-.d
+# Temporary or auto-generated files
+*.tmp
+*.bak
+*.backup
 
-#Ignore logs folder and log files
-/logs
-.log
+# Project metadata
+.project
+.settings/
+.cache/
+.hw/
+.runs/
+.sim/
+.sdk/
+.build/
+.ip_user_files/
+.webtalk/
 
-#Ignore lock files
-.lock
+# IDE and OS junk
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
 
-.bin
-.pdi
-.vitisWorkspace.json
-
-_ide/logs
-_ide/.wsdata
+# VS Code settings (if using)
+.vscode/
